# DictSQLite

./: .gitignore  .gitmessage  CONTRIBUTORS.md  LICENSE  README.md  README_JP.md  pyproject.toml  requirements.txt  sample.db  sample.py  setup.py
.githooks/: commit-msg
.github/workflows/: main.yml  pylint.yml
archive/v1.0.0/: test.py
archive/v1.0.0/dict_sqlite/: main.py
archive/v1.1.0/: test.py
archive/v1.1.0/dict_sqlite/: main.py
archive/v1.1.1/: 同時書き込みテスト v1.1.0.py
archive/v1.1.1/dict_sqlite/: main.py
archive/v1.2.0/: test.py  同時書き込みテスト.py
archive/v1.2.0/dict_sqlite/: main.py
archive/v1.2.1/dict_sqlite/: main.py
archive/v1.2.2/dict_sqlite/: main.py
archive/v1.2.3/: test.py
archive/v1.2.3/dict_sqlite/: main.py
archive/v1.3.0/: test.py  同時書き込みテスト v1.1.0.py  実験.py
archive/v1.3.0/dict_sqlite/: main.py
archive/v1.3.1/: checks.py  setup.py  socket test.py  同時書き込みテスト v1.1.0.py
archive/v1.3.1 - backup/: test.py  同時書き込みテスト v1.1.0.py  同時書き込みテスト2.py
archive/v1.3.1 - backup/dict_sqlite/: main.py
archive/v1.3.1/DictSQLite.egg-info/: PKG-INFO
archive/v1.3.3/: build.bat  同時書き込みテスト2.py
archive/v1.3.3/DictSQLite.egg-info/: PKG-INFO
archive/v1.3.5/: check.bat  upload.bat  実験.py
archive/v1.3.5/DictSQLite.egg-info/: PKG-INFO
archive/v1.3.6/: setup.py  test - beta.py  ベンチマーク v1.0.0.py
archive/v1.3.7/: build.bat  socket test2.py  test.py  同時書き込みテスト v1.1.1.py  同時書き込みテスト.py  実験.py
dict_sqlite/: crypto.py  main.py  private_key.pem  public_key.pem
dictsqlite/: __init__.py  main.py
documents/: english.md  japanese.md
(+19 files in other folders)
